--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -25,8 +25,7 @@
     "First you need to start the server.\n",
     "Instructions can be found in the coq-lsp repo (https://github.com/ejgallego/coq-lsp/tree/main/petanque)\n",
     "\n",
-    "Then, you can create a client and connect it to the same address and port.\n",
-    "You need to indicate the location of the project (directory containing the `_CoqProject` file, or root directory for the `.v` files)."
+    "Then, you can create a client and connect it to the same address and port."
    ]
   },
   {
@@ -36,8 +35,7 @@
    "outputs": [],
    "source": [
     "pet = Pytanque(\"127.0.0.1\", 8765)\n",
-    "pet.connect()\n",
-    "env = pet.init(root=\".\")"
+    "pet.connect()"
    ]
   },
   {
@@ -258,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. intros. auto.\n"
+      "Proof: intros. simpl. auto.\n"
      ]
     }
    ],
@@ -321,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -331,29 +329,14 @@
       "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
       "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
       "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      " 40%|████      | 8/20 [00:00<00:00, 167.41it/s]"
+      " 10%|█         | 2/20 [00:00<00:00, 353.31it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: induction n. easy. simpl. auto.\n"
+      "Proof: simpl. auto.\n"
      ]
     },
     {
