Support new hash in state

--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Internally the state is a simple `id`.\n",
+    "Internally the state is a simple `id` (and an optional `hash`).\n",
     "To retrieve the state of the prover, you can use the `goals` method."
    ]
   },
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: CurrentState(value=1)\n",
+      "Internal pytanque state: State(st=1, proof_finished=False, hash=None)\n",
       "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
       "\n",
       "n  : nat\n",
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the proof is finished (no more goal) the state becomes `ProofFinished`"
+    "If the proof is finished (no more goal) the field `proof_finished` becomes `True`."
    ]
   },
   {
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "CurrentState(value=4)"
+       "State(st=4, proof_finished=False, hash=1012926049)"
       ]
      },
      "execution_count": 6,
@@ -213,8 +213,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.CRITICAL)\n",
+    "\n",
+    "\n",
     "num_candidates = 16\n",
     "depth_limit = 3\n",
+    "run_ops = pt.RunOps(memo=False, hash=False) # deactivate memoization and hashing\n",
     "\n",
     "\n",
     "def depth_first_search(state: pt.State, depth: int) -> Optional[Proof]:\n",
@@ -227,16 +233,18 @@
     "    # Run the tactics.\n",
     "    for tac in tactics:\n",
     "        try:\n",
-    "            next_state = pet.run_tac(state, tac)\n",
-    "            match next_state:\n",
-    "                case pt.ProofFinished(st):\n",
-    "                    return [tac]\n",
-    "                case pt.CurrentState(st):\n",
-    "                    subproof = depth_first_search(next_state, depth + 1)\n",
-    "                    if subproof:\n",
-    "                        return [tac] + subproof\n",
-    "        except pt.PetanqueError:\n",
-    "            pass\n",
+    "            next_state = pet.run_tac(state, tac, run_ops)\n",
+    "\n",
+    "            if next_state.proof_finished:\n",
+    "                return [tac]\n",
+    "    \n",
+    "            subproof = depth_first_search(next_state, depth + 1)\n",
+    "            if subproof:\n",
+    "                return [tac] + subproof\n",
+    "            \n",
+    "        except pt.PetanqueError as err:\n",
+    "            logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
+    "\n",
     "    return None"
    ]
   },
@@ -256,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: intros. simpl. auto.\n"
+      "Proof: simpl. auto.\n"
      ]
     }
    ],
@@ -285,7 +293,7 @@
    "source": [
     "import heapq\n",
     "from tqdm import trange\n",
-    "import logging\n",
+    "\n",
     "\n",
     "def best_first_search(init_state: pt.State, max_iters: int, num_samples: int) -> Optional[Proof]:\n",
     "    queue = [(0.0, [], init_state)]\n",
@@ -295,23 +303,22 @@
     "            break\n",
     "\n",
     "        total_score, steps, state = heapq.heappop(queue)\n",
-    "        goals = pet.goals(state)\n",
-    "        visited.add(goals.pp())\n",
+    "        visited.add(state.hash)\n",
     "\n",
     "        step_cands, step_scores = generate_tactics(state, num_samples)\n",
     "\n",
     "        for step, score in zip(step_cands, step_scores):\n",
     "            try:\n",
     "                result = pet.run_tac(state, step)\n",
-    "                match result:\n",
-    "                    case pt.ProofFinished():\n",
-    "                        return steps + [step]\n",
-    "                    case pt.CurrentState():\n",
-    "                        next_goals = pet.goals(result)\n",
-    "                        if next_goals.pp() not in visited:\n",
-    "                            # Score is negative log probability summed across steps\n",
-    "                            new_score = total_score - score\n",
-    "                            heapq.heappush(queue, (new_score, steps + [step], result))\n",
+    "\n",
+    "                if result.proof_finished:\n",
+    "                    return steps + [step]\n",
+    "                \n",
+    "                if result.hash not in visited:\n",
+    "                    # Score is negative log probability summed across steps\n",
+    "                    new_score = total_score - score\n",
+    "                    heapq.heappush(queue, (new_score, steps + [step], result))\n",
+    "                    \n",
     "            except pt.PetanqueError as err:\n",
     "                logging.warning(f\"Invalid Tactic: {step} {err}\")\n",
     "    return None"
@@ -326,10 +333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      " 10%|█         | 2/20 [00:00<00:00, 353.31it/s]"
+      "  2%|▏         | 1/50 [00:00<00:00, 389.41it/s]"
      ]
     },
     {
@@ -349,7 +353,7 @@
    ],
    "source": [
     "state = pet.start(file=file_name, thm=thm_name)\n",
-    "proof = best_first_search(state, max_iters=20, num_samples=5)\n",
+    "proof = best_first_search(state, max_iters=50, num_samples=5)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
