--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -56,7 +56,7 @@
     "thm_name = \"test\"\n",
     "thm_body = \"n : 2 * n = n + n\"\n",
     "\n",
-    "with open(f\"./{file_name}\", 'w') as file:\n",
+    "with open(f\"./{file_name}\", \"w\") as file:\n",
     "    print(f\"Lemma {thm_name} {thm_body}.\", file=file)\n",
     "\n",
     "\n",
@@ -185,7 +185,9 @@
     "Score = float\n",
     "\n",
     "\n",
-    "def generate_tactics(goal: pt.State, num_candidates: int) -> Tuple[List[str], List[float]]:\n",
+    "def generate_tactics(\n",
+    "    goal: pt.State, num_candidates: int\n",
+    ") -> Tuple[List[str], List[float]]:\n",
     "    tactics = [\n",
     "        \"intros.\",\n",
     "        \"auto.\",\n",
@@ -214,13 +216,14 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
     "\n",
     "num_candidates = 16\n",
     "depth_limit = 3\n",
-    "run_ops = pt.RunOps(memo=False, hash=False) # deactivate memoization and hashing\n",
+    "run_ops = pt.RunOps(memo=False, hash=False)  # deactivate memoization and hashing\n",
     "\n",
     "\n",
     "def depth_first_search(state: pt.State, depth: int) -> Optional[Proof]:\n",
@@ -237,11 +240,11 @@
     "\n",
     "            if next_state.proof_finished:\n",
     "                return [tac]\n",
-    "    \n",
+    "\n",
     "            subproof = depth_first_search(next_state, depth + 1)\n",
     "            if subproof:\n",
     "                return [tac] + subproof\n",
-    "            \n",
+    "\n",
     "        except pt.PetanqueError as err:\n",
     "            logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
     "\n",
@@ -295,7 +298,9 @@
     "from tqdm import trange\n",
     "\n",
     "\n",
-    "def best_first_search(init_state: pt.State, max_iters: int, num_samples: int) -> Optional[Proof]:\n",
+    "def best_first_search(\n",
+    "    init_state: pt.State, max_iters: int, num_samples: int\n",
+    ") -> Optional[Proof]:\n",
     "    queue = [(0.0, [], init_state)]\n",
     "    visited = set()\n",
     "    for _ in trange(max_iters):\n",
@@ -313,12 +318,12 @@
     "\n",
     "                if result.proof_finished:\n",
     "                    return steps + [step]\n",
-    "                \n",
+    "\n",
     "                if result.hash not in visited:\n",
     "                    # Score is negative log probability summed across steps\n",
     "                    new_score = total_score - score\n",
     "                    heapq.heappush(queue, (new_score, steps + [step], result))\n",
-    "                    \n",
+    "\n",
     "            except pt.PetanqueError as err:\n",
     "                logging.warning(f\"Invalid Tactic: {step} {err}\")\n",
     "    return None"
