--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -25,8 +25,7 @@
     "First you need to start the server.\n",
     "Instructions can be found in the coq-lsp repo (https://github.com/ejgallego/coq-lsp/tree/main/petanque)\n",
     "\n",
-    "Then, you can create a client and connect it to the same address and port.\n",
-    "You need to indicate the location of the project (directory containing the `_CoqProject` file, or root directory for the `.v` files)."
+    "Then, you can create a client and connect it to the same address and port."
    ]
   },
   {
@@ -36,8 +35,7 @@
    "outputs": [],
    "source": [
     "pet = Pytanque(\"127.0.0.1\", 8765)\n",
-    "pet.connect()\n",
-    "env = pet.init(root=\".\")"
+    "pet.connect()"
    ]
   },
   {
@@ -58,7 +56,7 @@
     "thm_name = \"test\"\n",
     "thm_body = \"n : 2 * n = n + n\"\n",
     "\n",
-    "with open(f\"./{file_name}\", 'w') as file:\n",
+    "with open(f\"./{file_name}\", \"w\") as file:\n",
     "    print(f\"Lemma {thm_name} {thm_body}.\", file=file)\n",
     "\n",
     "\n",
@@ -69,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Internally the state is a simple `id`.\n",
+    "Internally the state is a simple `id` (and an optional `hash`).\n",
     "To retrieve the state of the prover, you can use the `goals` method."
    ]
   },
@@ -82,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: CurrentState(value=1)\n",
+      "Internal pytanque state: State(st=1, proof_finished=False, hash=None)\n",
       "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
       "\n",
       "n  : nat\n",
@@ -136,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the proof is finished (no more goal) the state becomes `ProofFinished`"
+    "If the proof is finished (no more goal) the field `proof_finished` becomes `True`."
    ]
   },
   {
@@ -147,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "CurrentState(value=4)"
+       "State(st=4, proof_finished=False, hash=1012926049)"
       ]
      },
      "execution_count": 6,
@@ -187,7 +185,9 @@
     "Score = float\n",
     "\n",
     "\n",
-    "def generate_tactics(goal: pt.State, num_candidates: int) -> Tuple[List[str], List[float]]:\n",
+    "def generate_tactics(\n",
+    "    goal: pt.State, num_candidates: int\n",
+    ") -> Tuple[List[str], List[float]]:\n",
     "    tactics = [\n",
     "        \"intros.\",\n",
     "        \"auto.\",\n",
@@ -215,8 +215,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.CRITICAL)\n",
+    "\n",
+    "\n",
     "num_candidates = 16\n",
     "depth_limit = 3\n",
+    "run_ops = pt.RunOps(memo=False, hash=False)  # deactivate memoization and hashing\n",
     "\n",
     "\n",
     "def depth_first_search(state: pt.State, depth: int) -> Optional[Proof]:\n",
@@ -229,16 +236,18 @@
     "    # Run the tactics.\n",
     "    for tac in tactics:\n",
     "        try:\n",
-    "            next_state = pet.run_tac(state, tac)\n",
-    "            match next_state:\n",
-    "                case pt.ProofFinished(st):\n",
-    "                    return [tac]\n",
-    "                case pt.CurrentState(st):\n",
-    "                    subproof = depth_first_search(next_state, depth + 1)\n",
-    "                    if subproof:\n",
-    "                        return [tac] + subproof\n",
-    "        except pt.PetanqueError:\n",
-    "            pass\n",
+    "            next_state = pet.run_tac(state, tac, run_ops)\n",
+    "\n",
+    "            if next_state.proof_finished:\n",
+    "                return [tac]\n",
+    "\n",
+    "            subproof = depth_first_search(next_state, depth + 1)\n",
+    "            if subproof:\n",
+    "                return [tac] + subproof\n",
+    "\n",
+    "        except pt.PetanqueError as err:\n",
+    "            logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
+    "\n",
     "    return None"
    ]
   },
@@ -258,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. intros. auto.\n"
+      "Proof: simpl. auto.\n"
      ]
     }
    ],
@@ -287,9 +296,11 @@
    "source": [
     "import heapq\n",
     "from tqdm import trange\n",
-    "import logging\n",
     "\n",
-    "def best_first_search(init_state: pt.State, max_iters: int, num_samples: int) -> Optional[Proof]:\n",
+    "\n",
+    "def best_first_search(\n",
+    "    init_state: pt.State, max_iters: int, num_samples: int\n",
+    ") -> Optional[Proof]:\n",
     "    queue = [(0.0, [], init_state)]\n",
     "    visited = set()\n",
     "    for _ in trange(max_iters):\n",
@@ -297,23 +308,22 @@
     "            break\n",
     "\n",
     "        total_score, steps, state = heapq.heappop(queue)\n",
-    "        goals = pet.goals(state)\n",
-    "        visited.add(goals.pp())\n",
+    "        visited.add(state.hash)\n",
     "\n",
     "        step_cands, step_scores = generate_tactics(state, num_samples)\n",
     "\n",
     "        for step, score in zip(step_cands, step_scores):\n",
     "            try:\n",
     "                result = pet.run_tac(state, step)\n",
-    "                match result:\n",
-    "                    case pt.ProofFinished():\n",
-    "                        return steps + [step]\n",
-    "                    case pt.CurrentState():\n",
-    "                        next_goals = pet.goals(result)\n",
-    "                        if next_goals.pp() not in visited:\n",
-    "                            # Score is negative log probability summed across steps\n",
-    "                            new_score = total_score - score\n",
-    "                            heapq.heappush(queue, (new_score, steps + [step], result))\n",
+    "\n",
+    "                if result.proof_finished:\n",
+    "                    return steps + [step]\n",
+    "\n",
+    "                if result.hash not in visited:\n",
+    "                    # Score is negative log probability summed across steps\n",
+    "                    new_score = total_score - score\n",
+    "                    heapq.heappush(queue, (new_score, steps + [step], result))\n",
+    "\n",
     "            except pt.PetanqueError as err:\n",
     "                logging.warning(f\"Invalid Tactic: {step} {err}\")\n",
     "    return None"
@@ -321,39 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: The variable IHn was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: induction n. Error(code=-32003, message='Coq: The variable n was not found in the current environment.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * 0\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: rewrite IHn. Error(code=-32003, message='Coq: Found no subterm matching \"2 * S n\" in the current goal.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      "WARNING:root:Invalid Tactic: easy. Error(code=-32003, message='Coq: Tactic failure: Cannot solve this goal.')\n",
-      " 40%|████      | 8/20 [00:00<00:00, 167.41it/s]"
+      "  2%|▏         | 1/50 [00:00<00:00, 389.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: induction n. easy. simpl. auto.\n"
+      "Proof: simpl. auto.\n"
      ]
     },
     {
@@ -366,7 +358,7 @@
    ],
    "source": [
     "state = pet.start(file=file_name, thm=thm_name)\n",
-    "proof = best_first_search(state, max_iters=20, num_samples=5)\n",
+    "proof = best_first_search(state, max_iters=50, num_samples=5)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
