--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: State(st=1, proof_finished=False, hash=None)\n",
+      "Internal pytanque state: State(st=1, proof_finished=False, hash=994378822)\n",
       "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
       "\n",
       "n  : nat\n",
@@ -125,9 +125,36 @@
     }
    ],
    "source": [
-    "state = pet.run_tac(state, \"induction n.\")\n",
+    "state = pet.run_tac(state, \"induction n. simpl.\")\n",
     "goals = pet.goals(state)\n",
     "print(goals.pp())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also use the `verbose` option of `run_tac` to retrieve and print the current goal after executing a tactic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n  : nat\n",
+      "IHn  : 2 * n = n + n\n",
+      "-----------------------------\n",
+      "2 * S n = S n + S n\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = pet.run_tac(state, \"auto.\", verbose=True)"
    ]
   },
   {
@@ -139,23 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "State(st=4, proof_finished=False, hash=1012926049)"
+       "State(st=5, proof_finished=True, hash=865928121)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "state = pet.run_tac(state, \"auto.\")\n",
-    "state = pet.run_tac(state, \"auto.\")\n",
+    "state = pet.run_tac(state, \"simpl; auto.\")\n",
     "state"
    ]
   },
@@ -172,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +223,8 @@
     "        \"easy.\",\n",
     "        \"trivial.\",\n",
     "        \"rewrite IHn.\",\n",
+    "        \"destruct IHn.\",\n",
+    "        \"lia.\"\n",
     "    ]\n",
     "    return random.choices(tactics, k=num_candidates), [\n",
     "        random.uniform(0, 1) for _ in range(num_candidates)\n",
@@ -211,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,34 +250,33 @@
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
     "\n",
-    "num_candidates = 16\n",
-    "depth_limit = 3\n",
-    "run_ops = pt.RunOps(memo=False, hash=False)  # deactivate memoization and hashing\n",
+    "def depth_first_search(state: pt.State, max_depth: int, num_candidates:int):\n",
+    "    run_ops = pt.Opts(memo=False, hash=False)  # deactivate memoization and hashing\n",
     "\n",
+    "    def search(state: pt.State, depth: int) -> Optional[Proof]:\n",
+    "        if depth >= max_depth:\n",
+    "            return None\n",
     "\n",
-    "def depth_first_search(state: pt.State, depth: int) -> Optional[Proof]:\n",
-    "    \"\"\"Try to prove `state` using depth-first search (DFS).\"\"\"\n",
-    "    if depth >= depth_limit:\n",
+    "        tactics, _ = generate_tactics(state, num_candidates)\n",
+    "\n",
+    "        # Run the tactics.\n",
+    "        for tac in tactics:\n",
+    "            try:\n",
+    "                next_state = pet.run_tac(state, tac, run_ops)\n",
+    "\n",
+    "                if next_state.proof_finished:\n",
+    "                    return [tac]\n",
+    "\n",
+    "                subproof = search(next_state, depth + 1)\n",
+    "                if subproof:\n",
+    "                    return [tac] + subproof\n",
+    "\n",
+    "            except pt.PetanqueError as err:\n",
+    "                logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
+    "\n",
     "        return None\n",
-    "\n",
-    "    tactics, _ = generate_tactics(state, num_candidates)\n",
-    "\n",
-    "    # Run the tactics.\n",
-    "    for tac in tactics:\n",
-    "        try:\n",
-    "            next_state = pet.run_tac(state, tac, run_ops)\n",
-    "\n",
-    "            if next_state.proof_finished:\n",
-    "                return [tac]\n",
-    "\n",
-    "            subproof = depth_first_search(next_state, depth + 1)\n",
-    "            if subproof:\n",
-    "                return [tac] + subproof\n",
-    "\n",
-    "        except pt.PetanqueError as err:\n",
-    "            logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
-    "\n",
-    "    return None"
+    "    \n",
+    "    return search(state, depth=0)"
    ]
   },
   {
@@ -260,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +300,9 @@
     }
    ],
    "source": [
-    "state = pet.start(file=file_name, thm=thm_name)\n",
-    "proof = depth_first_search(state, depth=0)\n",
+    "pre_commands = \"From Coq Require Import Lia.\"\n",
+    "state = pet.start(file_name, thm_name, pre_commands)\n",
+    "proof = depth_first_search(state, max_depth=10, num_candidates=16)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
@@ -290,13 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "from tqdm import trange\n",
-    "\n",
     "\n",
     "def best_first_search(\n",
     "    init_state: pt.State, max_iters: int, num_samples: int\n",
@@ -331,21 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 1/50 [00:00<00:00, 389.41it/s]"
+      "  8%|▊         | 4/50 [00:00<00:00, 426.58it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. auto.\n"
+      "Proof: auto. auto. simpl. auto.\n"
      ]
     },
     {
@@ -358,20 +386,13 @@
    ],
    "source": [
     "state = pet.start(file=file_name, thm=thm_name)\n",
-    "proof = best_first_search(state, max_iters=50, num_samples=5)\n",
+    "proof = best_first_search(state, max_iters=50, num_samples=10)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
     "else:\n",
     "    print(\"Not proof found...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
