--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -54,10 +54,10 @@
    "source": [
     "file_name = \"scratch.v\"\n",
     "thm_name = \"test\"\n",
-    "thm_body = \"n : 2 * n = n + n\"\n",
+    "thm_body = \"forall n : nat, 2 * n = n + n.\"\n",
     "\n",
     "with open(f\"./{file_name}\", \"w\") as file:\n",
-    "    print(f\"Lemma {thm_name} {thm_body}.\", file=file)\n",
+    "    print(f\"Lemma {thm_name} : {thm_body}\", file=file)\n",
     "\n",
     "\n",
     "state = pet.start(file=file_name, thm=thm_name)"
@@ -80,12 +80,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: State(st=1, proof_finished=False, hash=994378822)\n",
-      "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
+      "Internal pytanque state: State(st=201981, proof_finished=False, hash=466966112)\n",
+      "Prover goals: [Goal(info={'evar': ['Ser_Evar', 2], 'name': None}, hyps=[], ty='forall n : nat, 2 * n = n + n', pp='\\n-----------------------------\\nforall n : nat, 2 * n = n + n')]\n",
       "\n",
-      "n  : nat\n",
+      "\n",
       "-----------------------------\n",
-      "2 * n = n + n\n"
+      "forall n : nat, 2 * n = n + n\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "\n",
     "goals = pet.goals(state)  # Retrieve actual state\n",
     "print(f\"Prover goals: {goals}\\n\")\n",
-    "print(goals.pp())  # Pretty print the current goals"
+    "print(goals[0].pp)  # Pretty print the current goals"
    ]
   },
   {
@@ -120,14 +120,16 @@
       "n  : nat\n",
       "IHn  : 2 * n = n + n\n",
       "-----------------------------\n",
-      "2 * S n = S n + S n\n"
+      "2 * S n = S n + S n\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "state = pet.run_tac(state, \"induction n. simpl.\")\n",
     "goals = pet.goals(state)\n",
-    "print(goals.pp())"
+    "for g in goals:\n",
+    "    print(f\"{g.pp}\\n\")"
    ]
   },
   {
@@ -146,10 +148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Goal 0:\n",
       "n  : nat\n",
       "IHn  : 2 * n = n + n\n",
       "-----------------------------\n",
-      "2 * S n = S n + S n\n"
+      "2 * S n = S n + S n\n",
+      "\n"
      ]
     }
    ],
@@ -172,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "State(st=5, proof_finished=True, hash=865928121)"
+       "State(st=201985, proof_finished=True, hash=954002951)"
       ]
      },
      "execution_count": 7,
@@ -199,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,8 +228,8 @@
     "        \"easy.\",\n",
     "        \"trivial.\",\n",
     "        \"rewrite IHn.\",\n",
-    "        \"destruct IHn.\",\n",
-    "        \"lia.\"\n",
+    "        # \"destruct IHn.\",\n",
+    "        \"lia.\",\n",
     "    ]\n",
     "    return random.choices(tactics, k=num_candidates), [\n",
     "        random.uniform(0, 1) for _ in range(num_candidates)\n",
@@ -240,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +255,7 @@
     "logger.setLevel(logging.CRITICAL)\n",
     "\n",
     "\n",
-    "def depth_first_search(state: pt.State, max_depth: int, num_candidates:int):\n",
+    "def depth_first_search(state: pt.State, max_depth: int, num_candidates: int):\n",
     "    run_ops = pt.Opts(memo=False, hash=False)  # deactivate memoization and hashing\n",
     "\n",
     "    def search(state: pt.State, depth: int) -> Optional[Proof]:\n",
@@ -275,7 +280,7 @@
     "                logging.warning(f\"Invalid Tactic: {tac} {err}\")\n",
     "\n",
     "        return None\n",
-    "    \n",
+    "\n",
     "    return search(state, depth=0)"
    ]
   },
@@ -288,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. auto.\n"
+      "Proof: auto. trivial. simpl. trivial. trivial. induction n. intros. trivial. auto.\n"
      ]
     }
    ],
@@ -319,12 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import heapq\n",
     "from tqdm import trange\n",
+    "\n",
     "\n",
     "def best_first_search(\n",
     "    init_state: pt.State, max_iters: int, num_samples: int\n",
@@ -332,6 +338,8 @@
     "    queue = [(0.0, [], init_state)]\n",
     "    visited = set()\n",
     "    for _ in trange(max_iters):\n",
+    "        print(\"Queue:\", queue)\n",
+    "\n",
     "        if len(queue) == 0:\n",
     "            break\n",
     "\n",
@@ -339,41 +347,95 @@
     "        visited.add(state.hash)\n",
     "\n",
     "        step_cands, step_scores = generate_tactics(state, num_samples)\n",
+    "        print(step_cands)\n",
+    "        print(\"VISITED:\", visited)\n",
     "\n",
     "        for step, score in zip(step_cands, step_scores):\n",
     "            try:\n",
+    "                print(f\"try {step}\")\n",
     "                result = pet.run_tac(state, step)\n",
+    "                print(result.hash)\n",
     "\n",
     "                if result.proof_finished:\n",
     "                    return steps + [step]\n",
     "\n",
     "                if result.hash not in visited:\n",
+    "                    print(f\"Add result of {step} to queue\")\n",
     "                    # Score is negative log probability summed across steps\n",
     "                    new_score = total_score - score\n",
     "                    heapq.heappush(queue, (new_score, steps + [step], result))\n",
     "\n",
     "            except pt.PetanqueError as err:\n",
+    "                print(err)\n",
     "                logging.warning(f\"Invalid Tactic: {step} {err}\")\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 4/50 [00:00<00:00, 426.58it/s]"
+      " 20%|██        | 2/10 [00:00<00:00, 465.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: auto. auto. simpl. auto.\n"
+      "Queue: [(0.0, [], State(st=202049, proof_finished=False, hash=466966112))]\n",
+      "['intros.', 'intros.', 'trivial.', 'simpl.', 'lia.', 'induction n.', 'simpl.', 'simpl.', 'trivial.', 'easy.']\n",
+      "VISITED: {466966112}\n",
+      "try intros.\n",
+      "466966112\n",
+      "try intros.\n",
+      "466966112\n",
+      "try trivial.\n",
+      "466966112\n",
+      "try simpl.\n",
+      "466966112\n",
+      "try lia.\n",
+      "(-32003, 'Coq: The reference lia was not found in the current environment.')\n",
+      "try induction n.\n",
+      "954002951\n",
+      "Add result of induction n. to queue\n",
+      "try simpl.\n",
+      "466966112\n",
+      "try simpl.\n",
+      "466966112\n",
+      "try trivial.\n",
+      "466966112\n",
+      "try easy.\n",
+      "(-32003, 'Coq: Tactic failure: Cannot solve this goal.')\n",
+      "Queue: [(-0.1810256415418482, ['induction n.'], State(st=202054, proof_finished=False, hash=954002951))]\n",
+      "['easy.', 'simpl.', 'simpl.', 'easy.', 'auto.', 'intros.', 'intros.', 'auto.', 'trivial.', 'lia.']\n",
+      "VISITED: {466966112, 954002951}\n",
+      "try easy.\n",
+      "954002951\n",
+      "try simpl.\n",
+      "954002951\n",
+      "try simpl.\n",
+      "954002951\n",
+      "try easy.\n",
+      "954002951\n",
+      "try auto.\n",
+      "954002951\n",
+      "try intros.\n",
+      "954002951\n",
+      "try intros.\n",
+      "954002951\n",
+      "try auto.\n",
+      "954002951\n",
+      "try trivial.\n",
+      "954002951\n",
+      "try lia.\n",
+      "(-32003, 'Coq: The reference lia was not found in the current environment.')\n",
+      "Queue: []\n",
+      "Not proof found...\n"
      ]
     },
     {
@@ -385,14 +447,104 @@
     }
    ],
    "source": [
-    "state = pet.start(file=file_name, thm=thm_name)\n",
-    "proof = best_first_search(state, max_iters=50, num_samples=10)\n",
+    "init_state = pet.start(file_name, thm_name, pre_commands)\n",
+    "proof = best_first_search(init_state, max_iters=10, num_samples=10)\n",
     "\n",
     "if proof:\n",
     "    print(f\"Proof: {\" \".join(proof)}\")\n",
     "else:\n",
     "    print(\"Not proof found...\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State(st=202049, proof_finished=False, hash=466966112)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "init_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State(st=202067, proof_finished=False, hash=954002951)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = pet.run_tac(init_state, \"induction n.\")\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State(st=202068, proof_finished=False, hash=466966112)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = pet.run_tac(init_state, \"auto.\")\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "State(st=202069, proof_finished=False, hash=466966112)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = pet.run_tac(init_state, \"auto.\")\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
