--- a/examples/SF_exo_base.ipynb
+++ b/examples/SF_exo_base.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file = '/home/marc/software_foundations/lf/Basics.v'\n",
-    "#input_file = '/home/marc/software_foundations/lf/Induction.v'\n",
+    "input_file = \"/home/marc/software_foundations/lf/Basics.v\"\n",
+    "# input_file = '/home/marc/software_foundations/lf/Induction.v'\n",
     "exercises = extract_parts_to_json(input_file)"
    ]
   },
@@ -95,15 +95,15 @@
    ],
    "source": [
     "for ex in exercises:\n",
-    "    #print(ex['type_parts'])\n",
-    "    parts = ex['type_parts']\n",
-    "    names = ex['names']\n",
-    "    for (p,n) in zip(parts,names):\n",
-    "        if p == 'Proof' and len(n)>0:\n",
+    "    # print(ex['type_parts'])\n",
+    "    parts = ex[\"type_parts\"]\n",
+    "    names = ex[\"names\"]\n",
+    "    for p, n in zip(parts, names):\n",
+    "        if p == \"Proof\" and len(n) > 0:\n",
     "            print(n)\n",
     "            init_state = pet.start(file=input_file, thm=n[0])\n",
     "            try:\n",
-    "                print(agent.start(' ', init_state))\n",
+    "                print(agent.start(\" \", init_state))\n",
     "            except ValueError:\n",
     "                print(ex)"
    ]
