--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -80,12 +80,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: State(st=1, proof_finished=False, hash=994378822)\n",
-      "Prover goals: GoalsResponse(goals=[Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')])\n",
+      "Internal pytanque state: State(st=9, proof_finished=False, hash=1053139973)\n",
+      "Prover goals: [Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n')]\n",
       "\n",
       "n  : nat\n",
-      "-----------------------------\n",
-      "2 * n = n + n\n"
+      "|-2 * n = n + n\n"
      ]
     }
    ],
@@ -94,7 +93,8 @@
     "\n",
     "goals = pet.goals(state)  # Retrieve actual state\n",
     "print(f\"Prover goals: {goals}\\n\")\n",
-    "print(goals.pp())  # Pretty print the current goals"
+    "for g in goals:\n",
+    "    print(g.pp)  # Pretty print the current goals"
    ]
   },
   {
@@ -114,20 +114,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "-----------------------------\n",
-      "2 * 0 = 0 + 0\n",
+      "|-2 * 0 = 0 + 0\n",
+      "\n",
       "\n",
       "n  : nat\n",
       "IHn  : 2 * n = n + n\n",
-      "-----------------------------\n",
-      "2 * S n = S n + S n\n"
+      "|-2 * S n = S n + S n\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "state = pet.run_tac(state, \"induction n. simpl.\")\n",
     "goals = pet.goals(state)\n",
-    "print(goals.pp())"
+    "for g in goals:\n",
+    "    print(g.pp)  # Pretty print the current goals\n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -146,10 +149,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Goal 0:\n",
       "n  : nat\n",
       "IHn  : 2 * n = n + n\n",
-      "-----------------------------\n",
-      "2 * S n = S n + S n\n"
+      "|-2 * S n = S n + S n\n",
+      "\n"
      ]
     }
    ],
@@ -172,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "State(st=5, proof_finished=True, hash=865928121)"
+       "State(st=13, proof_finished=True, hash=24173511)"
       ]
      },
      "execution_count": 7,
@@ -295,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. auto.\n"
+      "Proof: trivial. induction n. intros. trivial. auto. auto. destruct IHn. trivial. simpl. auto.\n"
      ]
     }
    ],
@@ -366,14 +371,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  8%|▊         | 4/50 [00:00<00:00, 426.58it/s]"
+      " 10%|█         | 5/50 [00:00<00:00, 172.79it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: auto. auto. simpl. auto.\n"
+      "Proof: induction n. simpl. trivial. destruct IHn. simpl. auto.\n"
      ]
     },
     {
@@ -393,6 +398,13 @@
     "else:\n",
     "    print(\"Not proof found...\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
