--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Internal pytanque state: State(st=126815, proof_finished=False, hash=313514697)\n",
+      "Internal pytanque state: State(st=126845, proof_finished=False, hash=313514697)\n",
       "Prover goals: [Goal(info={'evar': ['Ser_Evar', 4], 'name': None}, hyps=[GoalHyp(names=['n'], ty='nat', def_=None)], ty='2 * n = n + n', pp='n  : nat\\n|-2 * n = n + n')]\n",
       "\n",
       "n  : nat\n",
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "State(st=126819, proof_finished=True, hash=2478396)"
+       "State(st=126849, proof_finished=True, hash=2478396)"
       ]
      },
      "execution_count": 7,
@@ -300,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: induction n. simpl. simpl. easy. induction n. destruct IHn. easy. destruct IHn. simpl. auto.\n"
+      "Proof: simpl. trivial. induction n. easy. trivial. induction n. easy. intros. auto.\n"
      ]
     }
    ],
@@ -371,14 +371,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 1/50 [00:00<00:00, 61.82it/s]"
+      "  6%|▌         | 3/50 [00:00<00:00, 105.99it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proof: simpl. auto.\n"
+      "Proof: induction n. easy. simpl. auto.\n"
      ]
     },
     {
